--- a/package.json
+++ b/package.json
@@ -1,18 +1,15 @@
 {
   "name": "random-quote-generator",
   "version": "0.1.0",
-	"private": false,
+  "private": false,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-		"lint": "vue-cli-service lint",
-		"deploy": "gh-pages -d dist"
-	},
-	"homepage": "https://odasta.github.io/random-quotes-generator/",
+    "lint": "vue-cli-service lint"
+  },
   "dependencies": {
     "axios": "^0.21.0",
     "core-js": "^3.6.5",
-    "gh-pages": "^3.1.0",
     "mitt": "^2.1.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0"
